<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape"
    tools:context=".SignInActivity">

    <TextView
        android:id="@+id/tvText"
        style="@style/my_theme"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="80dp"
        android:text="@string/arslicious"
        android:textAlignment="center"
        android:textStyle="italic"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.4" />

    <EditText
        android:id="@+id/etSignInEmail"
        style="@style/et_theme"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:drawableStart="@drawable/email_icon"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/off_white"
        android:textSize="25sp"
        app:layout_constraintHeight_percent="0.077"
        app:layout_constraintLeft_toLeftOf="@id/tvText"
        app:layout_constraintRight_toRightOf="@id/tvText"
        app:layout_constraintTop_toBottomOf="@id/tvText"
        app:layout_constraintWidth_percent="0.85" />

    <EditText
        android:id="@+id/etSignInPassword"
        style="@style/et_theme"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:drawableStart="@drawable/lock_icon"
        android:drawablePadding="10dp"
        android:ems="15"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/off_white"
        android:textSize="25sp"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintLeft_toLeftOf="@id/etSignInEmail"
        app:layout_constraintRight_toRightOf="@id/etSignInEmail"
        app:layout_constraintTop_toBottomOf="@id/etSignInEmail"
        app:layout_constraintWidth_percent="0.85" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignIn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/rv_cart_shape"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintLeft_toLeftOf="@id/etSignInPassword"
        app:layout_constraintRight_toRightOf="@id/etSignInPassword"
        app:layout_constraintTop_toBottomOf="@id/etSignInPassword"
        app:layout_constraintWidth_percent="0.55" />

    <TextView
        android:layout_width="140dp"
        android:layout_height="1dp"
        android:layout_marginRight="7dp"
        android:background="@color/teal_300"
        app:layout_constraintBottom_toBottomOf="@id/tvOr"
        app:layout_constraintRight_toLeftOf="@id/tvOr"
        app:layout_constraintTop_toTopOf="@id/tvOr" />

    <TextView
        android:id="@+id/tvOr"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:text="@string/or"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintHeight_percent="0.04"
        app:layout_constraintLeft_toLeftOf="@id/btnSignIn"
        app:layout_constraintRight_toRightOf="@id/btnSignIn"
        app:layout_constraintTop_toBottomOf="@id/btnSignIn"
        app:layout_constraintWidth_percent="0.09" />

    <TextView
        android:layout_width="140dp"
        android:layout_height="1dp"
        android:background="@color/teal_300"
        app:layout_constraintBottom_toBottomOf="@id/tvOr"
        app:layout_constraintLeft_toRightOf="@id/tvOr"
        app:layout_constraintTop_toTopOf="@id/tvOr" />

<!--    <androidx.appcompat.widget.AppCompatButton-->
<!--        android:id="@+id/btnGoogle"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:background="@drawable/google"-->
<!--        app:layout_constraintHeight_percent="0.05"-->
<!--        app:layout_constraintLeft_toLeftOf="@id/tvOr"-->
<!--        app:layout_constraintRight_toRightOf="@id/tvOr"-->
<!--        app:layout_constraintTop_toBottomOf="@id/tvOr"-->
<!--        app:layout_constraintWidth_percent="0.1" />-->

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/don_t_have_an_account"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.04"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintWidth_percent="0.59" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSign_up"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:background="@color/ass"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.04"
        app:layout_constraintLeft_toRightOf="@id/tvQuestion"
        app:layout_constraintWidth_percent="0.2" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>